# ocaml-bls12-381-hash

./: .gitlab-ci.yml  CHANGES.md  README.md  bls12-381-hash.opam  dune-project
benches/: bench_anemoi.ml  bench_griffin.ml  bench_poseidon.ml  bench_poseidon128.ml  bench_rescue.ml  dune
src/: anemoi.ml  bls12_381_hash.ml  bls12_381_hash.mli  dune  griffin.ml  jive.ml  poseidon.ml  poseidon128.ml  poseidon_utils.ml  rescue.ml  sponge.ml
src/anemoi/: README.md  anemoi.c  anemoi.h  anemoi_constants.h
src/bindings/anemoi/: caml_anemoi_stubs.c
src/bindings/griffin/: caml_griffin_stubs.c
src/bindings/poseidon/: caml_poseidon_stubs.c
src/bindings/poseidon128/: caml_poseidon128_stubs.c
src/bindings/rescue/: caml_rescue_stubs.c
src/griffin/: griffin.c  griffin.h
src/rescue/: rescue.c
test/: anemoi_jive_parameters.ml  dune  test_anemoi.ml  test_griffin.ml  test_jive.ml  test_poseidon.ml  test_poseidon128.ml  test_rescue.ml
