opam-version: "2.0"
authors: [ "Danny Willems <be.danny.willems@gmail.com>" ]
maintainer: [ "Danny Willems <be.danny.willems@gmail.com>" ]
synopsis: "Implementation of some cryptographic hash primitives using the scalar field of BLS12-381"
homepage: "https://gitlab.com/nomadic-labs/cryptography/ocaml-bls12-381-hash"
dev-repo: "git+https://gitlab.com/nomadic-labs/cryptography/ocaml-bls12-381-hash.git"
bug-reports: "https://gitlab.com/nomadic-labs/cryptography/ocaml-bls12-381-hash/issues"
license: "MIT"
depends: [
  "ocaml" {>= "4.12"}
  "dune" {>= "3.0"}
  "bls12-381" {>=  "6.0.0" & < "7.0.0"}
  "alcotest" {with-test}
  "bisect_ppx" {with-test & >= "2.5"}
]
build: [[ "dune" "build" "-j" jobs "-p" name "@install" ]]
run-test: [[ "dune" "runtest" "-p" name "-j" jobs ]]
available: arch != "ppc64" & arch != "arm32" & arch != "x86_32"
x-ci-accept-failures: [
  # because of -Werror
  "centos-7"
  "oraclelinux-7"
]
pin-depends: [
  ["bls12-381.6.0.0" "git+https://gitlab.com/nomadic-labs/cryptography/ocaml-bls12-381#vdum@ff"]
]
